# Nexo

./: .gitignore  CHANGELOG.md  GUIDE.md  README.md  pyproject.toml
nexo/: __init__.py  __main__.py  main.py  version.py
nexo/cli/: __init__.py  gui.py  send.py  serve.py
nexo/core/: __init__.py  client.py  protocol.py  server.py
nexo/gui/: __init__.py  app.py  config.py  receive.py  send.py  theme.py
scripts/: gen_testdir.py
tests/: test_transfer.py
