[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nexo_transfert"
version = "0.0.2"
description = "Fast and reliable local file transfer powered by Veltix"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
keywords = ["file-transfer", "lan", "tcp", "networking"]
dependencies = [
    "veltix>=1.6.4",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Communications :: File Sharing",
]

[project.urls]
Homepage = "https://github.com/NytroxDev/Nexo"
Source = "https://github.com/NytroxDev/Nexo"

[tool.setuptools.packages.find]
include = ["nexo*"]

[project.scripts]
nexo = "nexo.main:main"
