[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nexo_transfert"
version = "1.1.0"
description = "Fast and reliable local file transfer powered by Veltix"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
keywords = ["file-transfer", "lan", "tcp", "networking"]
dependencies = [
    "veltix>=1.7.5",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Communications :: File Sharing",
]

[project.urls]
Homepage = "https://github.com/NytroxDev/Nexo"
Source = "https://github.com/NytroxDev/Nexo"

[tool.setuptools.packages.find]
include = ["nexo*"]

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[project.scripts]
nexo = "nexo.main:main"
